# react-native-lingua

./: .gitignore  .posthog-events.json  AGENTS.md  app.config.js  app.json  global.css  package-lock.json  package.json  posthog-setup-report.md  skills-lock.json
.agents/skills/agent/: SKILL.md
.agents/skills/stream/: RULES.md  SKILL.md
.agents/skills/stream-android/: RULES.md  SKILL.md  builder.md  credentials.md  design-matching.md  sdk.md
.agents/skills/stream-android/references/: CHAT-COMPOSE-blueprints.md  CHAT-COMPOSE.md  CHAT-XML-blueprints.md  CHAT-XML.md  FEEDS-COMPOSE-blueprints.md  FEEDS-COMPOSE.md  VIDEO-COMPOSE-blueprints.md  VIDEO-COMPOSE.md
.agents/skills/stream-builder/: SKILL.md
.agents/skills/stream-react-native/: RULES.md  SKILL.md  builder.md  credentials.md  migrate.md  sdk.md
.agents/skills/stream-react-native/references/: CHAT-REACT-NATIVE-blueprints.md  CHAT-REACT-NATIVE.md  (+7 more)
.claude/skills/integration-expo/: SKILL.md
.claude/skills/mcp-analytics/: SKILL.md
src/app/: _layout.tsx  index.tsx  language-select.tsx  onboarding.tsx  sign-in.tsx  sign-up.tsx
src/app/(auth)/: sign-in.tsx  sign-up.tsx
src/app/(tabs)/: _layout.tsx  ai-teacher.tsx  chat.tsx  home.tsx  learn.tsx  profile.tsx
src/app/lesson/: [id].tsx
src/components/: CustomTabBar.tsx  LessonCard.tsx
src/constants/: images.ts
src/data/: languages.ts  lessons.ts  units.ts
src/lib/: posthog.ts
src/store/: languageStore.ts  useProgressStore.ts
src/theme/: tokens.css
src/types/: learning.ts
vision-agent/: Dockerfile  README.md  agent.py  main.py  pyproject.toml
(+14 files in other folders)
