[project]
name = "lingua-teacher-agent"
version = "0.1.0"
description = "AI language teacher voice agent — Gemini 3.1 Flash Live Preview + Stream Edge"
requires-python = ">=3.10"
dependencies = [
    "vision-agents[gemini,getstream]",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
# Both aliases run the same runner — Vision Agents spawner looks for `main`
agent = "agent:runner.cli"
main  = "main:runner.cli"
